--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ owner:
   facebook:       
   github:         jgpettibone      
   stackexchange:  
-  linkedin:           
+  linkedin:       http://www.linkedin.com/profile/view?id=10811391&trk=nav_responsive_tab_profile    
   instagram:      
   flickr:         
   tumblr:         
