--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title:            Title
-description:      Description
+title:            
+description:      
 disqus_shortname: 
 #Your site's domain goes here. Leave localhost server or blank when working locally.
 #url:               localhost:4000
