--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:            
+title:            Hacking Away
 description:      
 disqus_shortname: 
 #Your site's domain goes here. Leave localhost server or blank when working locally.
@@ -9,7 +9,7 @@ url:              http://jgpettibone.github.io
 owner:
   name:           Jeanette Pettibone
   avatar:         mylinkedinphoto.jpg
-  bio:            "Software engineer living in San Francisco."
+  bio:            "Software engineer in San Francisco."
   email:          
   # Social networking links used in footer. Update and remove as you like.
   twitter:        
