Added to the about

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url:              http://jgpettibone.github.io
 owner:
   name:           Jeanette Pettibone
   avatar:         mylinkedinphoto.jpg
-  bio:            "Software Engineer. Linguist."
+  bio:            "Software Engineer. Linguist. Computer and Natural Language Processor."
   email:          
   # Social networking links used in footer. Update and remove as you like.
   twitter:        
