Adding icons for contact in the footer

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ owner:
   bio:            "Full Stack Software Engineer. Linguist. Computer and Natural Language Processor."
   email:          
   # Social networking links used in footer. Update and remove as you like.
-  twitter:        
+  twitter:        jgpettibone   
   facebook:       
   github:         jgpettibone      
   stackexchange:  
