--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title:            Hacking Away
 description:      
 disqus_shortname: 
 #Your site's domain goes here. Leave localhost server or blank when working locally.
-# url:               
-url:              http://jgpettibone.github.io
+url:               
+# url:              http://jgpettibone.github.io
 
 # Owner/author information
 owner:
